# spine_editor

./: .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  render.yaml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  deploy-space.yml  deploy.yml
client/: .prettierignore  package.json  pnpm-lock.yaml  tsconfig.base.json
client/examples/: README.md
docs/superpowers/plans/: 2026-07-10-bridge-hardening.md  2026-07-10-codegraph-integration.md  2026-07-11-phase13-segmentation.md  2026-07-11-phase13-slice2.md  2026-07-11-phase14-slice1.md  2026-07-11-phase14-slice2.md  2026-07-11-phase15-ui-shell.md  2026-07-11-phase16a-unified-tree.md  2026-07-11-phase16b-editors.md  2026-07-11-phase17-animate-dock.md  2026-07-11-phase18-preview.md  2026-07-11-phase19-weights-mesh.md  2026-07-11-phase20-audio.md  2026-07-11-phase21-views.md  2026-07-11-restructure-client-server.md  2026-07-12-phase22a-io.md  2026-07-12-phase22b-skel.md  2026-07-13-phase23-ui-polish.md
docs/superpowers/specs/: 2026-07-10-bridge-hardening-design.md  2026-07-10-codegraph-design.md  2026-07-11-phase13-segmentation-design.md  2026-07-11-phase13-slice2-design.md  2026-07-11-phase14-slice1-design.md  2026-07-11-phase14-slice2-design.md  2026-07-11-phase16a-unified-tree-design.md  2026-07-11-phase16b-editors-design.md  2026-07-11-phase17-animate-dock-design.md  2026-07-11-phase18-preview-design.md  2026-07-11-phase19-weights-mesh-design.md  2026-07-11-phase20-audio-design.md  2026-07-11-phase21-views-design.md  2026-07-11-restructure-client-server-design.md  2026-07-12-phase22a-io-design.md  (+3 more)
examples/fixtures/: full-featured.json  simple-skeleton.json
server/: Dockerfile  README.md  pyproject.toml
server/app/: config.py  db.py  deps.py  mailer.py  main.py  models.py  schemas.py  security.py
server/app/api/: _images.py  auth.py  chat.py  generate.py  keys.py  projects.py  segment.py  settings.py
server/app/chat/: backend.py  loop.py  prompt.py
server/app/providers/: __init__.py  base.py  fal.py  mock.py  openai.py  runware.py  stability.py
server/app/segment/: __init__.py  backends.py  cutout.py  engines.py  fal.py  local.py  parts.py  schemas.py
server/tests/: conftest.py  test_auth.py  test_chat_rest.py  test_chat_ws.py  test_generate.py  test_keys_settings.py  test_part_set.py  test_projects.py  test_provider_capabilities.py  test_segment.py  test_segment_api.py  test_segment_cutout.py  test_segment_engines.py  test_segment_inpaint.py  test_segment_parts.py
skills/: README.md
skills/spine-animating/: SKILL.md
skills/spine-export/: SKILL.md
skills/spine-rigging/: SKILL.md
